--- a/PunktestandJeopardy/MainWindow.xaml
+++ b/PunktestandJeopardy/MainWindow.xaml
@@ -32,8 +32,62 @@
                 </Label>
 
                 <Grid Margin="0 10 0 0"
+                      x:Name="TwoUsers"
                       TextElement.FontSize="40"
                       TextElement.FontWeight="Bold">
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="280"
+                                          MaxWidth="280" />
+                        <ColumnDefinition Width="280"
+                                          MaxWidth="280" />
+                    </Grid.ColumnDefinitions>
+
+                    <Label Grid.Row="0"
+                           Grid.Column="0"
+                           Background="#c34d7a"
+                           x:Name="PlayerOneTwoUsers"
+                           Foreground="White"
+                           HorizontalContentAlignment="Center"
+                           Margin="5" />
+
+                    <Label Background="#c34d7a"
+                           x:Name="PlayerTwoTwoUsers"
+                           Foreground="White"
+                           HorizontalContentAlignment="Center"
+                           Grid.Row="0"
+                           Grid.Column="1"
+                           Margin="5" />
+
+                    <Label Content="0"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           Margin="5"
+                           MouseLeftButtonDown="Label_MouseLeftButtonDown"
+                           MouseRightButtonDown="Label_MouseRightButtonDown"
+                           Background="#e9d0d7"
+                           HorizontalContentAlignment="Center" />
+
+                    <Label Content="0"
+                           Grid.Row="1"
+                           Grid.Column="1"
+                           Margin="5"
+                           MouseLeftButtonDown="Label_MouseLeftButtonDown"
+                           MouseRightButtonDown="Label_MouseRightButtonDown"
+                           Background="#e9d0d7"
+                           HorizontalContentAlignment="Center" />
+                </Grid>
+
+                <Grid Margin="0 10 0 0"
+                      x:Name="ThreeUsers"
+                      TextElement.FontSize="40"
+                      TextElement.FontWeight="Bold"
+                      Visibility="Collapsed">
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
@@ -51,13 +105,13 @@
                     <Label Grid.Row="0"
                            Grid.Column="0"
                            Background="#c34d7a"
-                           x:Name="PlayerOne"
+                           x:Name="PlayerOneThreeUsers"
                            Foreground="White"
                            HorizontalContentAlignment="Center"
                            Margin="5" />
 
                     <Label Background="#c34d7a"
-                           x:Name="PlayerTwo"
+                           x:Name="PlayerTwoThreeUsers"
                            Foreground="White"
                            HorizontalContentAlignment="Center"
                            Grid.Row="0"
@@ -65,7 +119,7 @@
                            Margin="5" />
 
                     <Label Background="#c34d7a"
-                           x:Name="PlayerThree"
+                           x:Name="PlayerThreeThreeUsers"
                            Foreground="White"
                            HorizontalContentAlignment="Center"
                            Grid.Row="0"
