--- a/PunktestandJeopardy/UserSelection.xaml
+++ b/PunktestandJeopardy/UserSelection.xaml
@@ -4,7 +4,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        Title="UserSelection"
+        Title=""
+        WindowStartupLocation="CenterScreen"
         Width="250"
         Height="400">
     <Viewbox>
