--- a/PunktestandJeopardy/UserSelection.xaml
+++ b/PunktestandJeopardy/UserSelection.xaml
@@ -7,23 +7,39 @@
         Title=""
         WindowStartupLocation="CenterScreen"
         Width="250"
-        Height="400">
-    <Viewbox>
-        <Grid Width="200"
-              Height="300">
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+        Height="300">
+    <Window.Resources>
+        <FontFamily x:Key="CoolFont"> pack://application:,,,/font.ttf#JetBrains Mono </FontFamily>
+    </Window.Resources>
 
-            <ListView x:Name="Users"
-                      Grid.Row="0"
-                      SelectionChanged="SelectedUsers_Changed" />
+    <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1"
+                                 StartPoint="0.5,0">
+                <GradientStop Color="White"
+                              Offset="0" />
+                <GradientStop Color="#FFFF86BD"
+                              Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
 
-            <Button Grid.Row="1"
-                    Margin="5"
-                    Content="Confirm"
-                    Click="Confirm_Click" />
-        </Grid>
-    </Viewbox>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <ListView x:Name="Users"
+                  Grid.Row="0"
+                  SelectionChanged="SelectedUsers_Changed"
+                  TextElement.FontFamily="{StaticResource CoolFont}"
+                  TextElement.FontWeight="Bold"
+                  TextElement.FontSize="20"
+                  BorderBrush="{x:Null}"
+                  Background="{x:Null}" />
+
+        <Button Grid.Row="1"
+                Margin="5"
+                Content="Confirm"
+                Click="Confirm_Click" />
+    </Grid>
 </Window>
