--- a/PunktestandJeopardy/UserSelection.xaml
+++ b/PunktestandJeopardy/UserSelection.xaml
@@ -9,7 +9,125 @@
         Width="250"
         Height="300">
     <Window.Resources>
-        <FontFamily x:Key="CoolFont"> pack://application:,,,/font.ttf#JetBrains Mono </FontFamily>
+        <ResourceDictionary>
+            <FontFamily x:Key="CoolFont"> pack://application:,,,/font.ttf#JetBrains Mono </FontFamily>
+
+            <Style x:Key="CoolButton"
+                   TargetType="Button">
+                <Setter Property="FontFamily"
+                        Value="{StaticResource CoolFont}" />
+
+                <Setter Property="FontSize"
+                        Value="20" />
+
+                <Setter Property="Background"
+                        Value="Azure" />
+
+                <Setter Property="Foreground"
+                        Value="Black" />
+
+                <Setter Property="BorderThickness"
+                        Value="0" />
+
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Grid x:Name="RootGrid"
+                                  Background="{TemplateBinding Background}">
+                                <Label Content="{TemplateBinding Content}"
+                                       Foreground="{TemplateBinding Foreground}"
+                                       FontFamily="{TemplateBinding FontFamily}"
+                                       FontSize="{TemplateBinding FontSize}"
+                                       VerticalContentAlignment="Center"
+                                       HorizontalContentAlignment="Center" />
+                            </Grid>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver"
+                                         Value="True">
+                                    <Setter TargetName="RootGrid"
+                                            Property="Background"
+                                            Value="LightBlue" />
+                                </Trigger>
+
+                                <Trigger Property="IsPressed"
+                                         Value="True">
+                                    <Setter TargetName="RootGrid"
+                                            Property="Background"
+                                            Value="DeepSkyBlue" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="CoolListViewItem"
+                   TargetType="ListViewItem">
+                <Setter Property="Margin"
+                        Value="5" />
+
+                <Setter Property="Background"
+                        Value="Transparent" />
+
+                <Setter Property="FontFamily"
+                        Value="{StaticResource CoolFont}" />
+
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ListViewItem">
+                            <Border x:Name="Border"
+                                    Background="{TemplateBinding Background}"
+                                    Padding="{TemplateBinding Padding}">
+                                <Label Content="{TemplateBinding Content}"
+                                       FontFamily="{TemplateBinding FontFamily}"
+                                       FontSize="{TemplateBinding FontSize}"
+                                       FontWeight="{TemplateBinding FontWeight}" />
+                            </Border>
+
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver"
+                                         Value="True">
+                                    <Setter TargetName="Border"
+                                            Property="Background"
+                                            Value="LightBlue" />
+                                </Trigger>
+
+                                <Trigger Property="IsSelected"
+                                         Value="True">
+                                    <Setter TargetName="Border"
+                                            Property="Background"
+                                            Value="DeepSkyBlue" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="CoolListView"
+                   TargetType="ListView">
+                <Setter Property="Background"
+                        Value="Transparent" />
+
+                <Setter Property="FontFamily"
+                        Value="{StaticResource CoolFont}" />
+
+                <Setter Property="FontSize"
+                        Value="20" />
+
+                <Setter Property="Foreground"
+                        Value="Black" />
+
+                <Setter Property="BorderBrush"
+                        Value="Transparent" />
+
+                <Setter Property="BorderThickness"
+                        Value="0" />
+
+                <Setter Property="ItemContainerStyle"
+                        Value="{StaticResource CoolListViewItem}" />
+            </Style>
+        </ResourceDictionary>
     </Window.Resources>
 
     <Grid>
@@ -31,15 +149,12 @@
         <ListView x:Name="Users"
                   Grid.Row="0"
                   SelectionChanged="SelectedUsers_Changed"
-                  TextElement.FontFamily="{StaticResource CoolFont}"
-                  TextElement.FontWeight="Bold"
-                  TextElement.FontSize="20"
-                  BorderBrush="{x:Null}"
-                  Background="{x:Null}" />
+                  Style="{StaticResource CoolListView}" />
 
         <Button Grid.Row="1"
                 Margin="5"
                 Content="Confirm"
+                Style="{StaticResource CoolButton}"
                 Click="Confirm_Click" />
     </Grid>
 </Window>
