--- a/BoardEditorJeopardy/QuestionEditorWindow.xaml
+++ b/BoardEditorJeopardy/QuestionEditorWindow.xaml
@@ -6,9 +6,218 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title=""
-        Height="175"
-        Width="250">
+        Height="300"
+        Width="400">
+    <Window.Resources>
+        <FontFamily x:Key="CoolFont"> pack://application:,,,/font.ttf#JetBrains Mono </FontFamily>
+
+        <Style x:Key="CoolLabel"
+               TargetType="Label">
+            <Setter Property="Background"
+                    Value="Azure" />
+
+            <Setter Property="Foreground"
+                    Value="Black" />
+
+            <Setter Property="FontFamily"
+                    Value="{StaticResource CoolFont}" />
+
+            <Setter Property="BorderThickness"
+                    Value="0" />
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Label">
+                        <Grid x:Name="RootGrid"
+                              Background="{TemplateBinding Background}"
+                              Width="{TemplateBinding Width}"
+                              Height="{TemplateBinding Height}">
+                            <Label Content="{TemplateBinding Content}"
+                                   Foreground="{TemplateBinding Foreground}"
+                                   FontFamily="{TemplateBinding FontFamily}"
+                                   FontSize="{TemplateBinding FontSize}"
+                                   FontWeight="{TemplateBinding FontWeight}"
+                                   Margin="{TemplateBinding Padding}"
+                                   VerticalAlignment="Stretch"
+                                   HorizontalAlignment="Stretch"
+                                   Height="Auto"
+                                   Width="Auto"
+                                   VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                   HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="CoolButton"
+               TargetType="Button">
+            <Setter Property="FontFamily"
+                    Value="{StaticResource CoolFont}" />
+
+            <Setter Property="FontSize"
+                    Value="20" />
+
+            <Setter Property="Background"
+                    Value="Azure" />
+
+            <Setter Property="Foreground"
+                    Value="Black" />
+
+            <Setter Property="BorderThickness"
+                    Value="0" />
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid x:Name="RootGrid"
+                              Background="{TemplateBinding Background}"
+                              Width="{TemplateBinding Width}"
+                              Height="{TemplateBinding Height}">
+                            <Label Content="{TemplateBinding Content}"
+                                   Foreground="{TemplateBinding Foreground}"
+                                   FontFamily="{TemplateBinding FontFamily}"
+                                   FontSize="{TemplateBinding FontSize}"
+                                   VerticalAlignment="Stretch"
+                                   HorizontalAlignment="Stretch"
+                                   VerticalContentAlignment="Center"
+                                   HorizontalContentAlignment="Center" />
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver"
+                                     Value="True">
+                                <Setter TargetName="RootGrid"
+                                        Property="Background"
+                                        Value="LightBlue" />
+                            </Trigger>
+
+                            <Trigger Property="IsPressed"
+                                     Value="True">
+                                <Setter TargetName="RootGrid"
+                                        Property="Background"
+                                        Value="DeepSkyBlue" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="CoolComboBox" TargetType="ComboBox">
+            <Setter Property="FontFamily" Value="{StaticResource CoolFont}" />
+            
+            <Setter Property="FontSize" Value="16" />
+            
+            <Setter Property="Background" Value="White" />
+            
+            <Setter Property="Foreground" Value="Black" />
+            
+            <Setter Property="BorderThickness" Value="0" />
+            
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBox">
+                        <Grid>
+                            <ToggleButton x:Name="ToggleButton"
+                                          Background="{TemplateBinding Background}"
+                                          BorderThickness="0"
+                                          Focusable="False"
+                                          IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}">
+                                <ToggleButton.Template>
+                                    <ControlTemplate TargetType="ToggleButton">
+                                        <Grid x:Name="ButtonGrid" Background="{TemplateBinding Background}">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition />
+                                                <ColumnDefinition Width="20" />
+                                            </Grid.ColumnDefinitions>
+
+                                            <ContentPresenter Grid.Column="0"
+                                                              Content="{Binding Path=SelectionBoxItem, RelativeSource={RelativeSource AncestorType={x:Type ComboBox}}}"
+                                                              ContentTemplate="{Binding Path=SelectionBoxItemTemplate, RelativeSource={RelativeSource AncestorType={x:Type ComboBox}}}"
+                                                              ContentStringFormat="{Binding Path=SelectionBoxItemStringFormat, RelativeSource={RelativeSource AncestorType={x:Type ComboBox}}}"
+                                                              HorizontalAlignment="Left"
+                                                              VerticalAlignment="Center"
+                                                              Margin="5,0,0,0" />
+
+                                            <Path Grid.Column="1"
+                                                  x:Name="Arrow"
+                                                  Fill="Black"
+                                                  HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"
+                                                  Data="M 0,0 L 4,4 L 8,0 Z" />
+                                        </Grid>
+
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter TargetName="ButtonGrid" Property="Background" Value="LightBlue" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </ToggleButton.Template>
+                            </ToggleButton>
+
+                            <Popup IsOpen="{TemplateBinding IsDropDownOpen}"
+                                   Placement="Bottom"
+                                   PopupAnimation="Slide"
+                                   AllowsTransparency="True">
+                                <Grid MaxHeight="{TemplateBinding MaxDropDownHeight}"
+                                      MinWidth="{Binding ActualWidth, ElementName=ToggleButton}">
+                                    <Border Background="White" BorderThickness="1" BorderBrush="LightGray">
+                                        <ScrollViewer SnapsToDevicePixels="True">
+                                            <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained" />
+                                        </ScrollViewer>
+                                    </Border>
+                                </Grid>
+                            </Popup>
+                        </Grid>
+                        
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="HasItems" Value="false">
+                                <Setter TargetName="ToggleButton" Property="IsEnabled" Value="false"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+            <Setter Property="ItemContainerStyle">
+                <Setter.Value>
+                    <Style TargetType="ComboBoxItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ComboBoxItem">
+                                    <Border x:Name="ItemBorder" Padding="5" Background="Transparent">
+                                        <ContentPresenter />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter TargetName="ItemBorder" Property="Background" Value="LightBlue" />
+                                        </Trigger>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter TargetName="ItemBorder" Property="Background" Value="DeepSkyBlue" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="FontFamily" Value="{StaticResource CoolFont}" />
+                    </Style>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1"
+                                 StartPoint="0.5,0">
+                <GradientStop Color="White"
+                              Offset="0" />
+                <GradientStop Color="#FFFF86BD"
+                              Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
+
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
@@ -21,55 +230,80 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="0"
-                   Grid.Column="0"
-                   Margin="5"
-                   Text="Question Type:"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Right" />
+        <Label Grid.Row="0"
+               Grid.Column="0"
+               Margin="5"
+               Content="Question Type:"
+               FontSize="16"
+               Style="{StaticResource CoolLabel}"
+               VerticalAlignment="Stretch"
+               HorizontalAlignment="Stretch"
+               VerticalContentAlignment="Center"
+               HorizontalContentAlignment="Right" />
 
         <ComboBox Grid.Row="0"
                   Grid.Column="1"
                   Margin="5"
                   x:Name="QuestionType"
+                  Style="{StaticResource CoolComboBox}"
                   SelectionChanged="QuestionType_Changed" />
 
-        <TextBlock Grid.Row="1"
-                   Grid.Column="0"
-                   Margin="5"
-                   Text="Question:"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Right" />
+        <Label Grid.Row="1"
+               Grid.Column="0"
+               Margin="5"
+               Content="Question:"
+               FontSize="16"
+               Style="{StaticResource CoolLabel}"
+               VerticalAlignment="Stretch"
+               HorizontalAlignment="Stretch"
+               VerticalContentAlignment="Center"
+               HorizontalContentAlignment="Right" />
 
         <Button Grid.Row="1"
                 Grid.Column="1"
                 Margin="5"
                 Click="FileSelect_Click"
+                Style="{StaticResource CoolButton}"
+                Background="White"
+                Content="Select File"
                 x:Name="FileSelect"
                 Visibility="Collapsed" />
 
         <TextBox Grid.Row="1"
                  Grid.Column="1"
                  Margin="5"
+                 FontSize="16"
                  x:Name="Question"
+                 BorderThickness="0"
+                 Padding="5 0"
+                 VerticalContentAlignment="Center"
                  HorizontalAlignment="Stretch" />
 
-        <TextBlock Grid.Row="2"
-                   Grid.Column="0"
-                   Text="Answer:"
-                   Margin="5"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Right" />
+        <Label Grid.Row="2"
+               Grid.Column="0"
+               Content="Answer:"
+               Margin="5"
+               FontSize="16"
+               Style="{StaticResource CoolLabel}"
+               VerticalAlignment="Stretch"
+               HorizontalAlignment="Stretch"
+               VerticalContentAlignment="Center"
+               HorizontalContentAlignment="Right" />
 
         <TextBox Grid.Row="2"
                  Grid.Column="1"
-                 x:Name="Answer"
                  Margin="5"
+                 FontSize="16"
+                 x:Name="Answer"
+                 BorderThickness="0"
+                 Padding="5 0"
+                 VerticalContentAlignment="Center"
                  HorizontalAlignment="Stretch" />
 
         <Button Grid.Row="3"
                 Grid.Column="0"
                 Grid.ColumnSpan="2"
+                Style="{StaticResource CoolButton}"
                 Margin="5"
                 Content="Save"
                 Click="Save_Click" />
