--- a/PunktestandJeopardy/QuestionWindow.xaml
+++ b/PunktestandJeopardy/QuestionWindow.xaml
@@ -20,6 +20,9 @@
             <Setter Property="FontFamily"
                     Value="{StaticResource CoolFont}" />
 
+            <Setter Property="FontSize"
+                    Value="16" />
+
             <Setter Property="BorderThickness"
                     Value="0" />
 
